--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -13,12 +13,29 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:paddingBottom="20dp"
         android:text="@string/home"
         android:textAlignment="textStart"
-        android:textSize="20dp"
+        android:gravity="start"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/logout"
+        android:textAlignment="textStart"
+        android:gravity="start"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="logOutButton"/>
 
     <TextView
         android:id="@+id/homepageWordings"
@@ -26,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="8dp"
         android:text="@string/homepage_wordings"
         android:textSize="30sp"
         android:padding="24dp"
@@ -40,11 +57,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/book_appointment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homepageWordings"
+        app:layout_constraintBottom_toTopOf="@+id/viewBookingHistoryButton"
         android:onClick="bookAppointmentButton" />
 
     <Button
@@ -53,11 +70,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/view_booking_history"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bookAppointmentButton"
+        app:layout_constraintBottom_toTopOf="@+id/viewMyQueueButton"
         android:onClick="viewBookingHistoryButton" />
 
     <Button
@@ -66,11 +83,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/view_my_queue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewBookingHistoryButton"
+        app:layout_constraintBottom_toTopOf="@+id/viewfaqButton"
         android:onClick="viewMyQueueButton" />
 
     <Button
@@ -79,11 +96,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/view_faq"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewMyQueueButton"
+        app:layout_constraintBottom_toTopOf="@+id/viewAlerts"
         android:onClick="viewFAQButton" />
 
     <Button
@@ -92,11 +109,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="64dp"
         android:text="@string/view_alerts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewfaqButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:onClick="viewAlertsButton" />
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -137,10 +154,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/recent_cv_date"
+                android:id="@+id/homepage_cv_number"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
                 android:textSize="30sp"
+                android:text="1024"
                 />
 
         </RelativeLayout>
