--- a/app/src/main/res/layout/activity_choose_clinic.xml
+++ b/app/src/main/res/layout/activity_choose_clinic.xml
@@ -8,27 +8,37 @@
 
     <Button
         android:id="@+id/homepageButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textAlignment="textStart"
+        android:layout_margin="8dp"
         android:text="@string/home"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:onClick="homePageButton" />
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="@string/next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="confirmBookingButton"
+        />
+
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="350dp"
         android:layout_height="300dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/homepageButton"
-        android:onClick="clickMap" />
+         />
 
     <TextView
         android:id="@+id/queueTimeText"
@@ -37,7 +47,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/estimated_queue_time"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
+        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="20dp" />
 
@@ -70,7 +80,7 @@
         android:layout_marginTop="8dp"
         android:text="20 min"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/mapView"
+        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="20dp" />
 
@@ -95,5 +105,15 @@
         app:layout_constraintTop_toBottomOf="@+id/travelTime"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="20dp" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/totalTime"
+
+        />
 
 </android.support.constraint.ConstraintLayout>
