--- a/app/src/main/res/layout/recent_card_layout.xml
+++ b/app/src/main/res/layout/recent_card_layout.xml
@@ -21,7 +21,7 @@
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:id="@+id/recent_cv_title"
             android:layout_alignParentLeft="true"
@@ -30,13 +30,11 @@
             />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:id="@+id/recent_cv_date"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_toRightOf="@id/recent_cv_title"
-            android:layout_toEndOf="@id/recent_cv_title"
             android:textSize="12sp"
             />
 
