--- a/app/src/main/res/layout/clinic_card_layout.xml
+++ b/app/src/main/res/layout/clinic_card_layout.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:id="@+id/recent_card_view"
+    android:id="@+id/clinic_card_view"
     android:layout_margin="5dp"
     card_view:cardBackgroundColor="#DCDCDC"
     card_view:cardCornerRadius="12dp"
