--- a/app/src/main/res/layout/activity_my_queue.xml
+++ b/app/src/main/res/layout/activity_my_queue.xml
@@ -8,88 +8,78 @@
 
 
     <TextView
-        android:id="@+id/MyQueueName"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_qr_top_reminder"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/my_queue_text"
-        android:textSize="24sp"
+        android:textSize="34sp"
+        android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
-         />
-
-    <TextView
-        android:id="@+id/QueueText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/queue_text"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/MyQueueName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:paddingTop="40dp" />
+        android:paddingTop="48dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"/>
 
     <ImageView
         android:id="@+id/QRImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/QueueText"
-        app:srcCompat="@drawable/qrcode"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_qr_top_reminder"
+        app:layout_constraintBottom_toTopOf="@id/tv_qr_bottom_reminder"/>
 
     <TextView
-        android:id="@+id/ReminderText"
+        android:id="@+id/tv_qr_bottom_reminder"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/reminder_text"
+        android:text="@string/qr_bottom_reminder_text_inactive"
         android:textSize="24sp"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/QRImage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingBottom="40dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="48dp" />
 
 
     <TextView
-        android:id="@+id/QueueNumberText"
-        android:layout_width="200dp"
+        android:id="@+id/tv_queue_number_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/queuenumber_text"
-        android:textSize="24sp"
+        android:textSize="34sp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/MyQueueName"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:paddingTop="30dp"
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/queuenumber1Text"
+        android:id="@+id/tv_queue_number_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="30dp"
-        android:text="@string/queuenumber1_text"
+        android:padding="46dp"
         android:textAlignment="center"
-        android:textSize="80sp"
-        app:layout_constraintTop_toBottomOf="@id/QueueNumberText"
+        android:textSize="86sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_queue_number_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_queue_length_before_label"
         android:visibility="gone"
         />
 
     <TextView
-        android:id="@+id/WaitingTimeText"
+        android:id="@+id/tv_queue_length_before_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/waitingtime_text"
+        android:paddingBottom="20dp"
+        android:text="@string/queue_length_before_text"
         android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@id/queuenumber1Text"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@id/tv_queue_length_before_value"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:visibility="gone"
@@ -97,30 +87,43 @@
         />
 
     <TextView
-        android:id="@+id/Timingtext"
-        android:layout_width="200dp"
+        android:id="@+id/tv_queue_length_before_value"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
-        android:text="@string/timing_text"
-        android:textSize="50sp"
+        android:textSize="34sp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/WaitingTimeText"
+        app:layout_constraintBottom_toTopOf="@id/tv_queue_bottom_reminder"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/Reminder1Text"
-        android:layout_width="300dp"
+        android:id="@+id/tv_queue_bottom_reminder"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/reminder1_text"
-        android:textSize="24sp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:paddingBottom="60dp"
+        android:text="@string/queue_reminder_text_active"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/Timingtext"
+        android:textSize="17sp"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="10dp"
-        android:visibility="gone"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_create_booking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:srcCompat="@drawable/ic_add_white_24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_qr_top_reminder"
+        app:layout_constraintBottom_toTopOf="@id/tv_qr_bottom_reminder" />
 
 </android.support.constraint.ConstraintLayout>
