--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -19,9 +19,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <fragment
-        android:id="@+id/mapFragment"
+        android:id="@+id/mapFrag"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="300dp"
+        android:layout_width="350dp"
         android:layout_height="250dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:text="@string/name_text"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/mapFragment"
+        app:layout_constraintTop_toBottomOf="@id/mapFrag"
         android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="30dp" />
@@ -51,7 +51,7 @@
         android:textSize="20sp"
         android:layout_marginRight="30dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mapFragment"
+        app:layout_constraintTop_toBottomOf="@id/mapFrag"
         android:layout_marginTop="30dp" />
 
     <TextView
