--- a/app/src/main/res/layout/clinic_card_layout.xml
+++ b/app/src/main/res/layout/clinic_card_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="150dp"
     android:id="@+id/clinic_card_view"
     android:layout_margin="5dp"
     card_view:cardBackgroundColor="#DCDCDC"
@@ -25,9 +25,68 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/clinic_title"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textSize="15sp"
+            android:textAlignment="center"
+            android:textSize="25sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clinic_travel_title"
+            android:layout_below="@id/clinic_title"
+            android:text="@string/travel_time"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clinic_queue_title"
+            android:layout_below="@id/clinic_travel_title"
+            android:text="@string/queue_length"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clinic_total_title"
+            android:layout_below="@id/clinic_queue_title"
+            android:text="@string/total_time"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clinic_travel_edit"
+            android:textAlignment="textEnd"
+            android:gravity="end"
+            android:layout_alignTop="@id/clinic_travel_title"
+            android:text="@string/travel_time"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clinic_queue_edit"
+            android:textAlignment="textEnd"
+            android:gravity="end"
+            android:layout_alignTop="@id/clinic_queue_title"
+            android:text="@string/queue_length"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clinic_total_edit"
+            android:textAlignment="textEnd"
+            android:gravity="end"
+            android:layout_alignTop="@id/clinic_total_title"
+            android:text="@string/total_time"
+            android:textSize="20sp"
             />
 
 
