--- a/app/src/main/res/layout/activity_choose_clinic.xml
+++ b/app/src/main/res/layout/activity_choose_clinic.xml
@@ -3,16 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.ChooseClinic">
 
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/clinic_recycler_view"
-        android:layout_marginTop="30dp"
-        >
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp">
 
 
     </android.support.v7.widget.RecyclerView>
