--- a/app/src/main/res/layout/activity_my_queue.xml
+++ b/app/src/main/res/layout/activity_my_queue.xml
@@ -126,4 +126,15 @@
         app:layout_constraintTop_toBottomOf="@id/tv_qr_top_reminder"
         app:layout_constraintBottom_toTopOf="@id/tv_qr_bottom_reminder" />
 
+    <ProgressBar
+        android:id="@+id/pb_load_queue_view"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+         />
+
 </android.support.constraint.ConstraintLayout>
